--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -18,10 +18,10 @@ env_logger = "0.8.2"
 git-testament = "0.1"
 graphql-parser = "0.3"
 prometheus = "0.7"
-futures = { version = "0.3.1", features = ["compat"] }
-ipfs-api = { version = "=0.7.1", features = ["hyper-tls"] }
-lazy_static = "1.2.0"
-url = "2.1.1"
+futures = { version = "0.3.12", features = ["compat"] }
+ipfs-api = "0.7.2"
+lazy_static = "1.4.0"
+url = "2.2.0"
 crossbeam-channel = "0.5.0"
 graph = { path = "../graph" }
 graph-core = { path = "../core" }
@@ -36,7 +36,7 @@ graph-server-websocket = { path = "../server/websocket" }
 graph-server-metrics = { path = "../server/metrics" }
 graph-store-postgres = { path = "../store/postgres" }
 regex = "1.4.2"
-serde = { version = "1.0.117", features = ["derive", "rc"] }
+serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_regex = "1.1.0"
 structopt = "0.3.20"
 toml = "0.5.7"
