--- a/runtime/wasm/Cargo.toml
+++ b/runtime/wasm/Cargo.toml
@@ -17,6 +17,7 @@ semver = "0.10.0"
 lazy_static = "1.4.0"
 uuid = { version = "0.8.1", features = ["v4"] }
 strum = "0.20.0"
+rand = "0.6.1"
 strum_macros = "0.20.1"
 bytes = "0.5"
 anyhow = "1.0"
